cmake_minimum_required(VERSION 2.9 FATAL_ERROR)
project(MY_PROJECT)
set(Boost_DEBUG ON)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pclTest pclTest.cpp)
target_link_libraries(pclTest ${PCL_LIBRARIES})